feat(trader-created): new apis and kafka
