# api/index.ts
@@ -1,7 +1,22 @@
 export * from './helpers/app-settings';
 export * from './helpers/db/data-access';
-export * from './controllers/strategy.controller';
-export * from './enums/granularity.enum';
-export * from './interfaces/strategy.interface';
-export * from './models/strategy.model';
-export * from './services/strategy.service';
+
+export * from './models/command/trader-event-store.model';
+export * from './models/command/trader.model';
+
+export * from './models/query/trader-query.model';
+
+export * from './services/command/trader-event-producer.service';
+
+export * from './helpers/event-consumers/m5-topic-consumer.service';
+
+export * from './controllers/trader.controller';
+
+export * from './enums/event.enum';
+export * from './enums/instrument.enum';
+export * from './enums/query/trader-status.enum';
+
+export * from './interfaces/trader-event.interface';
+
+export * from './services/command/trader-command.service';
+export * from './services/query/trader-query.service';
